--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - HashingOptions__SaltSize=32
       - HashingOptions__HashSize=64
       - HashingOptions__Iterations=150000
+      - SESSIONS_DURATION=90
     ports:
       - "5000:8080" 
     depends_on:
