--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - HashingOptions__HashSize=64
       - HashingOptions__Iterations=150000
       - SESSIONS_DURATION=90
+      - PIN_DURATION=90
+      - NB_TENTATIVE_MAX=3
     ports:
       - "5000:8080" 
     depends_on:
