--- a/FournisseurIdentite/FournisseurIdentite.csproj
+++ b/FournisseurIdentite/FournisseurIdentite.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
