--- a/crypto/serveur/pom.xml
+++ b/crypto/serveur/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-beans</artifactId>
             <version>6.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <!-- <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
