--- a/crypto/serveur/pom.xml
+++ b/crypto/serveur/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>jakarta.mail</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
         <!-- <dependency>
             <groupId>io.jsonwebtoken</groupId>
